# logpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: main.yml  release.yml
benches/: CMakeLists.txt  LoggerBench.cpp
cmake/: FindFilesystem.cmake  logpp-config.cmake
examples/: AsyncLogger.cpp  BasicLogger.cpp  CMakeLists.txt  CustomPatternFormatterFlag.cpp  RollingFileLogger.cpp  TomlConfig.cpp  TomlCustomSinkConfig.cpp  logpp.file.custom.toml  logpp.file.toml  logpp.toml
fuzz/: AsyncSinkFuzz.cpp  CMakeLists.txt  EventLogBufferFuzz.cpp  FuzzStream.h
include/logpp/: logpp.h
include/logpp/config/: FileWatcher.h  TomlConfigurator.h
include/logpp/config/impl/: FileWatcherLinuxImpl.h  FileWatcherNoopImpl.h  FileWatcherWindowsImpl.h
include/logpp/core/: Clock.h  EventLogBuffer.h  FormatArgs.h  LogBuffer.h  LogBufferView.h  LogFieldVisitor.h  LogLevel.h  LogVisitor.h  LogWriter.h  Logger.h  LoggerFactory.h  LoggerRegistry.h  Offset.h  Ostream.h  SourceLocation.h  StringLiteral.h  Traits.h  common.h  config.h
include/logpp/date/: date.h  ios.h  tz.h  tz_private.h
include/logpp/format/: Formatter.h  LogFmtFormatter.h  PatternFormatter.h
include/logpp/format/flag/: DateFormatter.h  FieldsFormatter.h  Formatter.h  FullFormatter.h  LevelFormatter.h  LiteralFormatter.h  NameFormatter.h  SourceLocationFormatter.h  TextFormatter.h  ThreadFormatter.h  TimeFormatter.h  TimeZone.h
include/logpp/queue/: AsyncQueuePoller.h  BoundedTypedConcurrentAsyncQueue.h  IAsyncQueue.h  IAsyncQueuePoller.h  IGenericAsyncQueue.h  ITypedAsyncQueue.h  SimpleTypedBlockingQueue.h
include/logpp/queue/impl/: ConcurrentBoundedQueue.h  MPMCQueue.h
include/logpp/sinks/: AsyncSink.h  ColoredConsole.h  ColoredOutputConsole.h  Console.h  FileSink.h  FormatSink.h  LevelSink.h  LogFmt.h  MultiSink.h  RollingFileSink.h  Sink.h
include/logpp/sinks/file/: ArchiveStrategy.h  File.h  FileSink.h  RollingFileSink.h  RollingOfstream.h  RollingStrategy.h
include/logpp/threading/: AffinityMask.h
include/logpp/utils/: date.h  detect.h  env.h  file.h  string.h  thread.h  tuple.h
src/: AsyncQueuePoller.cpp  CMakeLists.txt  EventLogger.h  FileSink.cpp  FileWatcher.cpp  LogBuffer.cpp  LogBufferView.cpp  LogFmt.cpp  LogFmtFormatter.cpp  LoggerRegistry.cpp  PatternFormatter.cpp  RollingFileSink.cpp  SpinWait.cpp  SpinWait.h  TomlConfigurator.cpp  tz.cpp
tests/: ArchiveStrategyTests.cpp  AsyncSinkTests.cpp  CMakeLists.txt  EnvironmentTests.cpp  FileSinkTests.cpp  LogBufferTests.cpp  LogFmtFormatterTests.cpp  LoggerRegistryTests.cpp  LoggerTests.cpp  PatternFormatterTests.cpp  RollingFileSinkTests.cpp  RollingOfstreamTests.cpp  RollingStrategyTests.cpp  StringTests.cpp  TemporaryFile.h  TomlConfiguratorTests.cpp
tools/: check-version.sh  version.sh
